crates/cox-tui/src/snapshots/cox_tui__item_render__tests__fallback_after_timeout.snap
---
source: crates/cox-tui/src/item_render.rs
expression: screen(&missed)
---
⚙ read src/lib.rs · 7ms
│ fn main() {}
│ ✓ 12B 7ms
Plain markdown reply.
