crates/cox-tui/src/snapshots/cox_tui__item_render__tests__plugin_rendered.snap
---
source: crates/cox-tui/src/item_render.rs
expression: screen(&state)
---
⚙ read src/lib.rs · 7ms
│ tool:read by plugin
│ ✓ 12B 7ms
item:assistant_message by plugin
